# RDMA-Tutorial

./: .gitignore  Readme.md
doc/: Libibverbs API 编程.md  Libibverbs_API_编程.md  Librdmacm_API_编程.md  RDMA关键概念.md  RDMA技术背景及原理.md  RDMA样例解释.md  paper_list.md  rdma_programming.md
doc/slides/: rdma_zjq.pptx
perftest-4.4/: perftest.spec
perftest-4.4/debian/: changelog
perftest-4.4/src/: perftest_parameters.c  perftest_parameters.h
rdmacm_examples/: CMakeLists.txt  riostream.c  rstream.c  udpong.c
verbs_examples/: CMakeLists.txt  Makefile  config.h  rc_pingpong.c  simple.c  srq_pingpong.c  uc_pingpong.c  ud_pingpong.c  xsrq_pingpong.c
verbs_examples/ccan/: minmax.h
